--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   build:
-    name: Release - ${{ matrix.platform.target }}
+    name: Release - ${{ matrix.platform.os }} ${{ matrix.platform.arch }}-${{ matrix.platform.target }}
     runs-on: ${{ matrix.platform.os }}-latest
     strategy:
       matrix:
@@ -46,11 +46,11 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: dtolnay/rust-toolchain@stable
-      - run: cargo build --release --target ${{ matrix.arch }}-${{ matrix.target }} --target-dir target-${{ matrix.os }}
+      - run: cargo build --release --target ${{ matrix.platform.arch }}-${{ matrix.platform.target }} --target-dir target-${{ matrix.platform.os }}
       - uses: actions/upload-artifact@v4
         with:
-          name: csvs_${{ matrix.os }}_${{ matrix.arch }}
+          name: csvs_${{ matrix.platform.os }}_${{ matrix.platform.arch }}
           path: |
-            target-${{ matrix.os }}/${{ matrix.arch }}-${{ matrix.target }}/release/${{ matrix.executable }}
+            target-${{ matrix.platform.os }}/${{ matrix.platform.arch }}-${{ matrix.platform.target }}/release/${{ matrix.platform.executable }}
             *.md
             LICENSE
