--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,28 +14,24 @@ env:
 
 jobs:
   build-linux:
-    name: Release - ${{ matrix.platform.target }}
+    name: Release - ${{ matrix.platform.tag }}
     runs-on: ubuntu-latest
+    container: ghcr.io/blackdex/rust-musl:${{ matrix.platform.tag }}
     strategy:
       matrix:
         platform:
-          - target: aarch64-unknown-linux-musl
+          - tag: aarch64-musl-stable
             artifact: csvs_linux_aarch64
-            vars: CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=aarch64-linux-gnu-gcc CC=aarch64-linux-gnu-gcc
-          - target: x86_64-unknown-linux-musl
+          - tag: x86_64-musl-stable
             artifact: csvs_linux_x86_64
-            vars: CARGO_TARGET_X86_64_UNKNOWN_LINUX_MUSL_LINKER=x86_64-linux-musl-gcc CC=x86_64-linux-musl-gcc
     steps:
       - uses: actions/checkout@master
-      - run: sudo apt install -qq -y gcc-aarch64-linux-gnu musl-dev --no-install-recommends
-      - uses: dtolnay/rust-toolchain@stable
-      - run: rustup target add ${{ matrix.platform.target }}
-      - run: ${{ matrix.platform.vars }} cargo build --release --target ${{ matrix.platform.target }}
+      - run: cargo build --release
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.platform.artifact }}
           path: |
-            target/${{ matrix.platform.target }}/release/csvs
+            target/release/csvs
             *.md
             LICENSE
   build-macos:
@@ -58,7 +54,7 @@ jobs:
             LICENSE
   build-windows:
     name: Release - ${{ matrix.platform.target }}
-    runs-on: ${{ matrix.platform.runner }}
+    runs-on: windows-latest
     strategy:
       matrix:
         platform:
