--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,13 @@ jobs:
       - run: |
           mkdir csvs_macos_universal
           lipo -create -output csvs_macos_universal/csvs target/aarch64-apple-darwin/release/csvs target/x86_64-apple-darwin/release/csvs
+      - uses: lando/code-sign-action@v3
+        with:
+          file: csvs_macos_universal/csvs
+          certificate-data: ${{ secrets.APPLE_CERT_DATA }}
+          certificate-id: 22L7S8RX9L
+          certificate-password: ${{ secrets.APPLE_CERT_PASSWORD }}    
+      - run: |
           cp *.md csvs_macos_universal
           zip csvs_macos_universal.zip -r csvs_macos_universal
       - uses: actions/upload-artifact@v4
