--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,46 +38,86 @@ jobs:
         with:
           name: ${{ matrix.platform.artifact }}
           path: ${{ matrix.platform.artifact }}.tar.gz
+
   build-macos:
     name: Release - universal-apple-darwin
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@master
-      - uses: dtolnay/rust-toolchain@stable
-      - run: |
+
+      - name: Build aarch64
+        run: |
           rustup target add aarch64-apple-darwin
           cargo build --release --target aarch64-apple-darwin
-      - run: |
+
+      - name: Build x86_64
+        run: |
           rustup target add x86_64-apple-darwin
           cargo build --release --target x86_64-apple-darwin
-      - run: |
+      
+      - name: Build universal binary
+        run: |
           mkdir csvs_macos_universal
           lipo -create -output csvs_macos_universal/csvs target/aarch64-apple-darwin/release/csvs target/x86_64-apple-darwin/release/csvs
-      - uses: lando/code-sign-action@v3
-        with:
-          file: csvs_macos_universal/csvs
-          apple-team-id: 22L7S8RX9L
-          certificate-data: ${{ secrets.APPLE_CERT_DATA }}
-          certificate-password: ${{ secrets.APPLE_CERT_PASSWORD }}
-          options: --timestamp --options runtime
-      - run: |
-          cp *.md csvs_macos_universal
+
+      - name: Import certification
+        shell: bash
+        run: |
+          function import_cert() {
+            security import "$1" -k ~/Library/Keychains/macos-build.keychain -P "$2" -T /usr/bin/codesign -T /usr/bin/productsign
+          }
+      
+          # Create keychain
+          security create-keychain -p actions macos-build.keychain
+          security default-keychain -s macos-build.keychain
+          security unlock-keychain -p actions macos-build.keychain
+          security set-keychain-settings -t 3600 -u macos-build.keychain
+      
+          echo "${{ secrets.APPLE_CERT_DATA }}" | base64 --decode > developerID_application.p12
+      
+          # attempt to import p12 directly but fallback if it fails
+          if ! import_cert developerID_application.p12 "${{ secrets.APPLE_CERT_PASSWORD }}"; then
+            openssl pkcs12 -in developerID_application.p12 -nocerts -out "$RUNNER_TEMP/codesign.key" -nodes -password pass:"${{ secrets.APPLE_CERT_PASSWORD }}"
+            openssl pkcs12 -in developerID_application.p12 -clcerts -nokeys -out "$RUNNER_TEMP/codesign.crt" -password pass:"${{ secrets.APPLE_CERT_PASSWORD }}"
+            import_cert "$RUNNER_TEMP/codesign.key" ""
+            import_cert "$RUNNER_TEMP/codesign.crt" ""
+          fi
+      
+          # Key signing
+          security set-key-partition-list -S apple-tool:,apple: -s -k actions macos-build.keychain
+          # Scope out the keychain
+          security find-identity -v macos-build.keychain
+      
+      - name: Signing with codesign
+        run: |
+          codesign -f --timestamp --options runtime -s "${{ secrets.APPLE_TEAM_ID }}" csvs_macos_universal/csvs
+          codesign -v csvs_macos_universal/csvs --verbose
           hdiutil create -srcfolder csvs_macos_universal -format UDZO csvs_macos_universal.dmg
-      - uses: lando/code-sign-action@v3
+          codesign -f --timestamp -s "${{ secrets.APPLE_TEAM_ID }}" csvs_macos_universal.dmg
+          codesign -v csvs_macos_universal.dmg --verbose
+      
+      - name: Upload to the notarization service
+        uses: lando/notarize-action@v2
         with:
-          file: csvs_macos_universal.dmg
-          apple-notary-user: ${{ secrets.APPLE_NOTARY_USER }}
-          apple-notary-password: ${{ secrets.APPLE_NOTARY_PASSWORD }}
-          apple-product-id: jp.koma-private.csvs
-          apple-team-id: 22L7S8RX9L
-          certificate-data: ${{ secrets.APPLE_CERT_DATA }}
-          certificate-password: ${{ secrets.APPLE_CERT_PASSWORD }}
-          options: --timestamp --options runtime
-      - run: xcrun stapler staple csvs_macos_universal.dmg    
+          appstore-connect-username: ${{ secrets.APPLE_NOTARY_USER }}
+          appstore-connect-password: ${{ secrets.APPLE_NOTARY_PASSWORD }}
+          appstore-connect-team-id: ${{ secrets.APPLE_TEAM_ID }}
+          primary-bundle-id: jp.koma-private.csvs
+          product-path: csvs_macos_universal.dmg
+          tool: notarytool
+          verbose: true
+      
+      - name: Verifying Notarization
+        run: codesign -vvvv -R="notarized" --check-notarization csvs_macos_universal.dmg
+      
+      - name: Staple the ticket to the distribution
+        run: xcrun stapler staple csvs_macos_universal.dmg
+
       - uses: actions/upload-artifact@v4
         with:
           name: csvs_macos_universal
           path: csvs_macos_universal.dmg
+
   build-windows:
     name: Release - ${{ matrix.platform.target }}
     runs-on: windows-latest
