--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,13 @@
 name: Release
 
-permissions:
-  contents: write
-
 on:
   push:
-    branches: [ "master", "dev" ]
-  pull_request:
     branches: [ "master" ]
+    tags:
+      - 'v*'
+
+permissions:
+  contents: write
 
 env:
   CARGO_TERM_COLOR: always
@@ -58,6 +58,7 @@ jobs:
       - name: Build universal binary
         run: |
           mkdir csvs_macos_universal
+          cp *.md csvs_macos_universal
           lipo -create -output csvs_macos_universal/csvs target/aarch64-apple-darwin/release/csvs target/x86_64-apple-darwin/release/csvs
 
       - name: Import certification
@@ -144,3 +145,41 @@ jobs:
         with:
           name: ${{ matrix.platform.artifact }}
           path: ${{ matrix.platform.artifact }}.zip
+
+  release:
+    needs: [build-linux, build-macos, build-windows]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download packages
+        uses: actions/download-artifact@v4
+
+      - name: Checksum
+        run: |
+          echo CHECKSUM_LINUX_AARCH64="$(shasum -a 256 csvs_linux_aarch64.tar.gz | awk '{ print $1 }')" >> "$GITHUB_ENV"
+          echo CHECKSUM_LINUX_X86_64="$(shasum -a 256 csvs_linux_x86_64.tar.gz | awk '{ print $1 }')" >> "$GITHUB_ENV"
+          echo CHECKSUM_MACOS_UNIVERSAL="$(shasum -a 256 csvs_macos_universal.dmg | awk '{ print $1 }')" >> "$GITHUB_ENV"
+          echo CHECKSUM_WINDOWS_AARCH64="$(shasum -a 256 csvs_windows_aarch64.zip | awk '{ print $1 }')" >> "$GITHUB_ENV"
+          echo CHECKSUM_WINDOWS_X86_64="$(shasum -a 256 csvs_windows_x86_64.zip | awk '{ print $1 }')" >> "$GITHUB_ENV"
+
+      - name: Release note
+        run: |
+          echo "SHA-256 Checksums" > Release.txt
+          echo "[Windows Intel/AMD 64bit]   csvs_windows_x86_64.zip   ${{ env.CHECKSUM_WINDOWS_X86_64 }}" >> Release.txt
+          echo "[Windows ARM 64bit]         csvs_windows_aarch64.zip  ${{ env.CHECKSUM_WINDOWS_AARCH64 }}" >> Release.txt
+          echo "[macOS Intel/Apple silicon] csvs_macos_universal.dmg  ${{ env.CHECKSUM_MACOS_UNIVERSAL }}" >> Release.txt
+          echo "[Linux Intel/AMD 64bit]     csvs_linux_x86_64.tar.gz  ${{ env.CHECKSUM_LINUX_X86_64 }}" >> Release.txt
+          echo "[Linux ARM 64bit]           csvs_linux_aarch64.tar.gz ${{ env.CHECKSUM_LINUX_AARCH64 }}" >> Release.txt
+
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          body_path: Release.txt
+          generate_release_notes: true
+          files: |
+            csvs_linux_aarch64.tar.gz
+            csvs_linux_x86_64.tar.gz
+            csvs_macos_universal.dmg
+            csvs_windows_aarch64.zip
+            csvs_windows_x86_64.zip
