--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,14 +152,17 @@ jobs:
     steps:
       - name: Download packages
         uses: actions/download-artifact@v4
+        with:
+          path: artifact
+          merge-multiple: true
 
       - name: Checksum
         run: |
-          echo CHECKSUM_LINUX_AARCH64="$(shasum -a 256 csvs_linux_aarch64.tar.gz | awk '{ print $1 }')" >> "$GITHUB_ENV"
-          echo CHECKSUM_LINUX_X86_64="$(shasum -a 256 csvs_linux_x86_64.tar.gz | awk '{ print $1 }')" >> "$GITHUB_ENV"
-          echo CHECKSUM_MACOS_UNIVERSAL="$(shasum -a 256 csvs_macos_universal.dmg | awk '{ print $1 }')" >> "$GITHUB_ENV"
-          echo CHECKSUM_WINDOWS_AARCH64="$(shasum -a 256 csvs_windows_aarch64.zip | awk '{ print $1 }')" >> "$GITHUB_ENV"
-          echo CHECKSUM_WINDOWS_X86_64="$(shasum -a 256 csvs_windows_x86_64.zip | awk '{ print $1 }')" >> "$GITHUB_ENV"
+          echo CHECKSUM_LINUX_AARCH64="$(shasum -a 256 artifact/csvs_linux_aarch64.tar.gz | awk '{ print $1 }')" >> "$GITHUB_ENV"
+          echo CHECKSUM_LINUX_X86_64="$(shasum -a 256 artifact/csvs_linux_x86_64.tar.gz | awk '{ print $1 }')" >> "$GITHUB_ENV"
+          echo CHECKSUM_MACOS_UNIVERSAL="$(shasum -a 256 artifact/csvs_macos_universal.dmg | awk '{ print $1 }')" >> "$GITHUB_ENV"
+          echo CHECKSUM_WINDOWS_AARCH64="$(shasum -a 256 artifact/csvs_windows_aarch64.zip | awk '{ print $1 }')" >> "$GITHUB_ENV"
+          echo CHECKSUM_WINDOWS_X86_64="$(shasum -a 256 artifact/csvs_windows_x86_64.zip | awk '{ print $1 }')" >> "$GITHUB_ENV"
 
       - name: Release note
         run: |
@@ -169,16 +172,23 @@ jobs:
           echo "[macOS Intel/Apple silicon] csvs_macos_universal.dmg  ${{ env.CHECKSUM_MACOS_UNIVERSAL }}" >> Release.txt
           echo "[Linux Intel/AMD 64bit]     csvs_linux_x86_64.tar.gz  ${{ env.CHECKSUM_LINUX_X86_64 }}" >> Release.txt
           echo "[Linux ARM 64bit]           csvs_linux_aarch64.tar.gz ${{ env.CHECKSUM_LINUX_AARCH64 }}" >> Release.txt
+          cat Release.txt
 
-
+      - name: 'Get Previous tag'
+        id: previoustag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+        with:
+          fallback: 1.0.0
+          
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ steps.previoustag.outputs.tag }}
           body_path: Release.txt
           generate_release_notes: true
           files: |
-            csvs_linux_aarch64.tar.gz
-            csvs_linux_x86_64.tar.gz
-            csvs_macos_universal.dmg
-            csvs_windows_aarch64.zip
-            csvs_windows_x86_64.zip
+            artifact/csvs_linux_aarch64.tar.gz
+            artifact/csvs_linux_x86_64.tar.gz
+            artifact/csvs_macos_universal.dmg
+            artifact/csvs_windows_aarch64.zip
+            artifact/csvs_windows_x86_64.zip
