--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -174,7 +174,7 @@ jobs:
           echo "| macOS   | Intel/Apple silicon | csvs_macos_universal.dmg  | ${{ env.CHECKSUM_MACOS_UNIVERSAL }} |" >> Distributions.md
           echo "| Linux   | Intel/AMD 64bit     | csvs_linux_x86_64.tar.gz  | ${{ env.CHECKSUM_LINUX_X86_64 }} |" >> Distributions.md
           echo "| Linux   | ARM 64bit           | csvs_linux_aarch64.tar.gz | ${{ env.CHECKSUM_LINUX_AARCH64 }} |" >> Distributions.md
-          cat Release.txt
+          cat Distributions.md
 
       - name: Release
         uses: softprops/action-gh-release@v2
